Creato con Colaboratory

--- a/Decoder.ipynb
+++ b/Decoder.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Untitled5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjhc7FOYU8zQpsm8riNPE6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +31,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import torch"
       ],
       "execution_count": null,
       "outputs": []
