--- a/Decoder.ipynb
+++ b/Decoder.ipynb
@@ -31,7 +31,8 @@
         "colab": {}
       },
       "source": [
-        "import torch"
+        "import torch\n",
+        "from torch import nn"
       ],
       "execution_count": null,
       "outputs": []
