--- a/Decoder.ipynb
+++ b/Decoder.ipynb
@@ -10,7 +10,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -31,10 +32,17 @@
         "colab": {}
       },
       "source": [
+        "import numpy as np\n",
+        "import argparse\n",
         "import torch\n",
-        "from torch import nn"
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "from torchvision import datasets, models, transforms\n",
+        "from PIL import Image\n",
+        "\n",
+        "PATH = \"http://www.robots.ox.ac.uk/~albanie/models/pytorch-mcn/vgg_face_dag.pth\""
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -46,7 +54,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 124
         },
-        "outputId": "bc02be2f-18e7-4658-fa16-0cdc529a63df"
+        "outputId": "169a9e3e-aa57-40a4-887c-a85d47ca4a14"
       },
       "source": [
         "from google.colab import drive\n",
@@ -76,13 +84,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "fd150935-2cf1-4bbf-9433-c0fcd110a650"
+        "outputId": "c8173d73-63c6-4f44-aa65-bc266c1a5675"
       },
       "source": [
         "with open(\"/content/drive/My Drive/Speech2Face/prova.txt\") as f:\n",
-        "  print(f.read())"
+        "  print(f.read())\n",
+        "cup = Image.open(\"/content/drive/My Drive/Speech2Face/cup.jpg\")"
       ],
-      "execution_count": 4,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -90,6 +99,151 @@
             "ciao ciao\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oeQYRwEa5fKd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 997
+        },
+        "outputId": "76855f3e-a22b-47d4-d8f5-953e9b6ff304"
+      },
+      "source": [
+        "# Initialize vgg with 11 layers\n",
+        "vgg = models.vgg16_bn(pretrained=True, progress=True)\n",
+        "\n",
+        "# We remove the last 2 layers of classifier to have 4096-D features vector\n",
+        "new_classifier = nn.Sequential(*list(vgg.classifier.children())[:-2])\n",
+        "vgg.classifier = new_classifier\n",
+        "vgg.cuda()"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "VGG(\n",
+              "  (features): Sequential(\n",
+              "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (1): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (2): ReLU(inplace=True)\n",
+              "    (3): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (4): BatchNorm2d(64, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (5): ReLU(inplace=True)\n",
+              "    (6): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "    (7): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (8): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (9): ReLU(inplace=True)\n",
+              "    (10): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (11): BatchNorm2d(128, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (12): ReLU(inplace=True)\n",
+              "    (13): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "    (14): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (15): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (16): ReLU(inplace=True)\n",
+              "    (17): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (18): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (19): ReLU(inplace=True)\n",
+              "    (20): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (21): BatchNorm2d(256, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (22): ReLU(inplace=True)\n",
+              "    (23): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "    (24): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (25): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (26): ReLU(inplace=True)\n",
+              "    (27): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (28): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (29): ReLU(inplace=True)\n",
+              "    (30): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (31): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (32): ReLU(inplace=True)\n",
+              "    (33): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "    (34): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (35): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (36): ReLU(inplace=True)\n",
+              "    (37): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (38): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (39): ReLU(inplace=True)\n",
+              "    (40): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+              "    (41): BatchNorm2d(512, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+              "    (42): ReLU(inplace=True)\n",
+              "    (43): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+              "  )\n",
+              "  (avgpool): AdaptiveAvgPool2d(output_size=(7, 7))\n",
+              "  (classifier): Sequential(\n",
+              "    (0): Linear(in_features=25088, out_features=4096, bias=True)\n",
+              "    (1): ReLU(inplace=True)\n",
+              "    (2): Dropout(p=0.5, inplace=False)\n",
+              "    (3): Linear(in_features=4096, out_features=4096, bias=True)\n",
+              "    (4): ReLU(inplace=True)\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4XTYOAaN9c5q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "preprocess = transforms.Compose([\n",
+        "    transforms.Resize(256),\n",
+        "    transforms.CenterCrop(224),\n",
+        "    transforms.ToTensor(),\n",
+        "    transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
+        "])\n",
+        "input_tensor = preprocess(cup)\n",
+        "input_batch = input_tensor.unsqueeze(0).to(\"cuda\")\n"
+      ],
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zm5JtpGJFE0O",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "99934d94-00b7-4e17-f8f9-91b0a0d97189"
+      },
+      "source": [
+        "\n",
+        "\n",
+        "vgg.train(False)\n",
+        "vgg(input_batch)\n"
+      ],
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0.,  ..., 0., 0., 0.]], device='cuda:0',\n",
+              "       grad_fn=<ReluBackward1>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 82
         }
       ]
     }
