Code to download voxceleb dataset

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -6,7 +6,6 @@
       "name": "Speech2Face.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyOjhc7FOYU8zQpsm8riNPE6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +28,47 @@
       "cell_type": "code",
       "metadata": {
         "id": "Us6ergKlbJbh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7jXRWARmcebB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# path = \"/content/drive/My Drive/Speech2Face/vox\"\n",
+        "!curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cXILePzTdsI_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!unzip \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" -d \"/content/drive/My Drive/Speech2Face/ff/ext/\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rBM5q_83fkuE",
         "colab_type": "code",
         "colab": {}
       },
