--- a/NewDecoder.ipynb
+++ b/NewDecoder.ipynb
@@ -5,14 +5,13 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "mount_file_id": "1kRmi2kDmdOjvCupyFnTrK4wuttLOzx8I",
-      "authorship_tag": "ABX9TyNA0McWGpoJXpnWzzbdI30u",
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -32,9 +31,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 124
         },
-        "outputId": "1718481e-1b14-4572-b886-da0559063335"
+        "outputId": "932267c5-eaff-4b97-b4cd-d3ce8a3c255b"
       },
       "source": [
         "from google.colab import drive\n",
@@ -45,7 +44,11 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -62,7 +65,7 @@
         "vox1_path = \"/content/drive/My Drive/Speech2Face/vox1_dataset/\"\n",
         "img = vox1_path+\"unzippedFaces\"\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +81,7 @@
       },
       "source": [
         "# !wget http://www.robots.ox.ac.uk/~vgg/research/CMBiometrics/data/zippedFaces.tar.gz \n",
-        "!tar zxvf zippedFaces.tar.gz -C \"/content/drive/My Drive/Speech2Face/vox1_dataset/\""
+        "# !tar zxvf zippedFaces.tar.gz -C \"/content/drive/My Drive/Speech2Face/vox1_dataset/\""
       ],
       "execution_count": null,
       "outputs": [
@@ -5188,7 +5191,7 @@
         "\n",
         "        return face_vectors, image_"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5307,7 +5310,7 @@
         "        model.load_state_dict(state_dict)\n",
         "    return model"
       ],
-      "execution_count": 3,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -5349,7 +5352,7 @@
         "\n",
         "        return x"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -5433,8 +5436,6 @@
       },
       "source": [
         "class Compose(object):\n",
-        "    \"\"\"引数transformに格納された変形を順番に実行するクラス\n",
-        "    \"\"\"\n",
         "    def __init__(self, transforms):\n",
         "        self.transforms = transforms\n",
         "        \n",
@@ -5484,7 +5485,7 @@
         "    def __call_(self, phase, img):\n",
         "        return self.data_transform[phase](img)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5492,7 +5493,11 @@
       "metadata": {
         "id": "i4UAJu92re1f",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 383
+        },
+        "outputId": "e647780c-e581-4942-f3bf-ba98679b19d3"
       },
       "source": [
         "import argparse\n",
@@ -5504,9 +5509,10 @@
         "from torch import nn, optim\n",
         "from tqdm import tqdm\n",
         "\n",
-        "from dataloader import EmbedImagePairs\n",
-        "from face_encoder_model import vgg_face_dag\n",
-        "from face_decoder_model import Generator\n",
+        "\n",
+        "#from dataloader import EmbedImagePairs\n",
+        "#from face_encoder_model import vgg_face_dag\n",
+        "#from face_decoder_model import Generator\n",
         "\n",
         "\n",
         "global_epoch = 0\n",
@@ -5560,51 +5566,58 @@
         "        _save_model(epoch, model, optimizer, output_dir_name)\n",
         "\n",
         "\n",
-        "if __name__ == \"__main__\":\n",
-        "    parser = argparse.ArgumentParser()\n",
-        "    parser.add_argument('--base_dir', default=os.path.expanduser('~/Speech2Face'))\n",
-        "    parser.add_argument(\"--input\", default=\"train.txt\")\n",
-        "    parser.add_argument(\"--batch_size\", type=int, default=128)\n",
-        "    parser.add_argument(\"--num_epochs\", type=int, default=150)\n",
-        "    parser.add_argument(\"--checkpoint_path\", default=None)\n",
-        "    args = parser.parse_args()\n",
-        "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "base_dir='/content/drive/My Drive/Speech2Face/'\n",
+        "input=\"train.txt\"\n",
+        "batch_size=128\n",
+        "num_epochs=150\n",
+        "checkpoint_path=None\n",
         "\n",
-        "    # Set Model\n",
-        "    model = Generator(4096).to(device)\n",
         "\n",
-        "    # Load face-encoder model\n",
-        "    face_encoder_path = join(args.base_dir, \"models\", \"vgg_face_dag.pth\")\n",
-        "    face_encoder_model = vgg_face_dag(face_encoder_path).to(device)\n",
-        "    color_mean, color_std = face_encoder_model.meta[\"mean\"], face_encoder_model.meta[\"std\"]\n",
-        "    color_mean = [tmp / 255.0 for tmp in color_mean]\n",
-        "    color_std = [tmp / 255.0 for tmp in color_std]\n",
-        "\n",
-        "    # Set loss and optimizer\n",
-        "    criterion = nn.MSELoss()\n",
-        "    optimizer = optim.Adam(model.parameters())\n",
-        "\n",
-        "    # Set DataLoader\n",
-        "    input_path = join(args.base_dir, args.input)\n",
-        "    dataset = EmbedImagePairs(input_path, face_encoder_model,\n",
-        "                              color_mean, color_std, device)\n",
-        "    trn_dataloader = DataLoader(dataset, batch_size=args.batch_size, shuffle=True)\n",
-        "\n",
-        "    output_dir_name = join(args.base_dir, \"models\", \"face_decoder\")\n",
-        "\n",
-        "    if args.checkpoint_path:\n",
-        "        checkpoint = torch.load(args.checkpoint_path)\n",
-        "        global_epoch = checkpoint[\"epoch\"]\n",
-        "        model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
-        "        optimizer.load_state_dict(checkpoint[\"optimizer_state_dict\"])\n",
-        "\n",
-        "    # Train\n",
-        "    train(model, trn_dataloader, criterion, optimizer, device, output_dir_name,\n",
-        "            num_epochs=args.num_epochs)\n",
-        "    print(\"Finish training\")"
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "# Set Model\n",
+        "model = Generator(4096).to(device)\n",
+        "# Load face-encoder model\n",
+        "face_encoder_path = join(base_dir, \"Pretrained\", \"VGG_FACE.t7\")\n",
+        "face_encoder_model = vgg_face_dag(face_encoder_path).to(device)\n",
+        "color_mean, color_std = face_encoder_model.meta[\"mean\"], face_encoder_model.meta[\"std\"]\n",
+        "color_mean = [tmp / 255.0 for tmp in color_mean]\n",
+        "color_std = [tmp / 255.0 for tmp in color_std]\n",
+        "# Set loss and optimizer\n",
+        "criterion = nn.MSELoss()\n",
+        "optimizer = optim.Adam(model.parameters())\n",
+        "# Set DataLoader\n",
+        "input_path = join(base_dir, args.input)\n",
+        "dataset = EmbedImagePairs(input_path, face_encoder_model,\n",
+        "                          color_mean, color_std, device)\n",
+        "trn_dataloader = DataLoader(dataset, batch_size=batch_size, shuffle=True)\n",
+        "output_dir_name = join(base_dir, \"models\", \"face_decoder\")\n",
+        "if checkpoint_path:\n",
+        "    checkpoint = torch.load(checkpoint_path)\n",
+        "    global_epoch = checkpoint[\"epoch\"]\n",
+        "    model.load_state_dict(checkpoint[\"model_state_dict\"])\n",
+        "    optimizer.load_state_dict(checkpoint[\"optimizer_state_dict\"])\n",
+        "# Train\n",
+        "train(model, trn_dataloader, criterion, optimizer, device, output_dir_name, num_epochs=num_epochs)\n",
+        "print(\"Finish training\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-17-2b05a5f915d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;31m# Load face-encoder model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0mface_encoder_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbase_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Pretrained\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"VGG_FACE.t7\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m \u001b[0mface_encoder_model\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvgg_face_dag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mface_encoder_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m \u001b[0mcolor_mean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor_std\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mface_encoder_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmeta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"mean\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mface_encoder_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmeta\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"std\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m \u001b[0mcolor_mean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mtmp\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m255.0\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtmp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcolor_mean\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-13-9c74129ff898>\u001b[0m in \u001b[0;36mvgg_face_dag\u001b[0;34m(weights_path, **kwargs)\u001b[0m\n\u001b[1;32m    103\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVgg_face_dag\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mweights_path\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m         \u001b[0mstate_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    106\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_state_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(f, map_location, pickle_module, **pickle_load_args)\u001b[0m\n\u001b[1;32m    569\u001b[0m         \u001b[0mpickle_load_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'encoding'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'utf-8'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    570\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 571\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mopened_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    572\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_zipfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopened_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    573\u001b[0m             \u001b[0;31m# The zipfile reader is going to advance the current file position.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36m_open_file_like\u001b[0;34m(name_or_buffer, mode)\u001b[0m\n\u001b[1;32m    227\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_open_file_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    228\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0m_is_path\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 229\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    230\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    231\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m'w'\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/serialization.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, mode)\u001b[0m\n\u001b[1;32m    208\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0m_open_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_opener\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    209\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 210\u001b[0;31m         \u001b[0msuper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0m_open_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    212\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__exit__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/My Drive/Speech2Face/Pretrained/VGG_FACE.t7'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
