Creato con Colaboratory

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -47,7 +47,7 @@
       },
       "source": [
         "# path = \"/content/drive/My Drive/Speech2Face/vox\"\n",
-        "!curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip"
+        "# !curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip"
       ],
       "execution_count": null,
       "outputs": []
@@ -60,7 +60,7 @@
         "colab": {}
       },
       "source": [
-        "!unzip \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" -d \"/content/drive/My Drive/Speech2Face/ff/ext/\""
+        "# !unzip \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" -d \"/content/drive/My Drive/Speech2Face/ff/ext/\""
       ],
       "execution_count": null,
       "outputs": []
@@ -69,6 +69,71 @@
       "cell_type": "code",
       "metadata": {
         "id": "rBM5q_83fkuE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import librosa\n",
+        "import numpy as np"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "meRq3GNUTrIO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "wav, sr = librosa.load('/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10270/5sJomL_D0_g/00001.wav',sr = 16000, duration = 6.0 ,mono = True) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "arqNwvJpU1pI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "spectro = librosa.core.stft(wav, n_fft = 512, hop_length = int(np.ceil(0.01 * sr)),win_length = int(np.ceil(0.025 * sr)) , window='hann', center=True,pad_mode='reflect')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cZCVSaO-VHau",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def adjust(stft):\n",
+        "  if stft.shape[1] == 601:\n",
+        "    return stft\n",
+        "  else:\n",
+        "    return np.concatenate((stft,stft[:,0:601 - stft.shape[1]]),axis = 1)\n",
+        "\n",
+        "spectroComplex = adjust(spectro)\n",
+        "converted = np.zeros((spectroComplex.shape[0], spectroComplex.shape[1], 2))\n",
+        "i = np.arange(spectroComplex.shape[0])\n",
+        "j = np.arange(spectroComplex.shape[1])\n",
+        "\n",
+        "converted[i,j[:,np.newaxis], 0] = spectroComplex[i,j[:,np.newaxis]].real\n",
+        "converted[i,j[:,np.newaxis], 1] = spectroComplex[i,j[:,np.newaxis]].imag"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "o5sDbBkIa7Fm",
         "colab_type": "code",
         "colab": {}
       },
