Created the Model

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -138,7 +138,85 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "\n",
+        "class SpeechEncoder(nn.Module):\n",
+        "\n",
+        "    def __init__(self):\n",
+        "        super(SpeechEncoder, self).__init__()\n",
+        "        self.conv1 = nn.Conv2d(2, 64, kernel_size=4,stride=1) \n",
+        "        self.conv2 = nn.Conv2d(64, 64, kernel_size=4,stride=1)\n",
+        "        self.conv3 = nn.Conv2d(64, 128, kernel_size=4,stride=1) \n",
+        "        self.pooling1 = nn.MaxPool2d(kernel_size=(2,1), stride=(2,1))\n",
+        "        self.conv4 = nn.Conv2d(128, 128, kernel_size=4,stride=1) \n",
+        "        self.pooling2 = nn.MaxPool2d(kernel_size=(2,1), stride=(2,1))\n",
+        "        self.conv5 = nn.Conv2d(128, 128, kernel_size=4,stride=1) \n",
+        "        self.pooling3 = nn.MaxPool2d(kernel_size=(2,1), stride=(2,1))\n",
+        "        self.conv6 = nn.Conv2d(128, 256, kernel_size=4,stride=1) \n",
+        "        self.pooling4 = nn.MaxPool2d(kernel_size=(2,1), stride=(2,1))\n",
+        "        self.conv7 = nn.Conv2d(256, 512, kernel_size=4,stride=1) \n",
+        "        self.conv8 = nn.Conv2d(512, 512, kernel_size=4,stride=2) \n",
+        "\n",
+        "        self.conv9 = nn.Conv2d(512, 512, kernel_size=3,stride=2) # Queste due celle sono diverse\n",
+        "        self.pooling5 = nn.AvgPool2d(kernel_size=(1,1), stride=1)# Queste due celle sono diverse\n",
+        "\n",
+        "        self.fc1 = nn.Linear(512 * 1 * 144, 4096)\n",
+        "        self.fc2 = nn.Linear(4096, 4096)\n",
+        "\n",
+        "        self.batch_norm1 = nn.BatchNorm2d(64)\n",
+        "        self.batch_norm2 = nn.BatchNorm2d(64)\n",
+        "        self.batch_norm3 = nn.BatchNorm2d(128)\n",
+        "        self.batch_norm4 = nn.BatchNorm2d(128)\n",
+        "        self.batch_norm5 = nn.BatchNorm2d(128)\n",
+        "        self.batch_norm6 = nn.BatchNorm2d(256)\n",
+        "        self.batch_norm7 = nn.BatchNorm2d(512)\n",
+        "        self.batch_norm8 = nn.BatchNorm2d(512)\n",
+        "        self.batch_norm9 = nn.BatchNorm2d(512)\n",
+        "      \n",
+        "\n",
+        "\n",
+        "        self.relu = nn.ReLU()\n",
+        "        \n",
+        "\n",
+        "    def forward(self, x):\n",
+        "        out = self.batch_norm1(self.relu(self.conv1(x)))\n",
+        "        out = self.batch_norm2(self.relu(self.conv2(out)))\n",
+        "        out = self.batch_norm3(self.relu(self.conv3(out)))\n",
+        "        out = self.pooling1(out)\n",
+        "        out = self.batch_norm4(self.relu(self.conv4(out)))\n",
+        "        out = self.pooling2(out)\n",
+        "        out = self.batch_norm5(self.relu(self.conv5(out)))\n",
+        "        out = self.pooling3(out)\n",
+        "        out = self.batch_norm6(self.relu(self.conv6(out)))\n",
+        "        out = self.pooling4(out)\n",
+        "        out = self.batch_norm7(self.relu(self.conv7(out)))\n",
+        "        out = self.batch_norm8(self.relu(self.conv8(out)))\n",
+        "        out = self.batch_norm9(self.relu(self.pooling5(self.conv9(out))))\n",
+        "\n",
+        "        batch = out.shape[0]\n",
+        "        out = out.view((batch, 512 * 1 * 144))\n",
+        "        out = self.relu(self.fc1(out))\n",
+        "        out = self.fc2(out)\n",
+        "\n",
+        "        return out\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kTVgjwV0dHL6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "model = SpeechEncoder()\n",
+        "input = torch.unsqueeze(torch.tensor(converted).reshape(2,257,601), 0)\n",
+        "\n",
+        "model(input.type(torch.float32)).shape"
       ],
       "execution_count": null,
       "outputs": []
