Creato con Colaboratory

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -87,7 +87,7 @@
         "colab": {}
       },
       "source": [
-        "wav, sr = librosa.load('/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10270/5sJomL_D0_g/00001.wav',sr = 16000, duration = 6.0 ,mono = True) "
+        "wav, sr = librosa.load('/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10270/OhfKF8FSq3Y/00003.wav',sr = 16000, duration = 6.0 ,mono = True) "
       ],
       "execution_count": null,
       "outputs": []
@@ -213,10 +213,14 @@
         "colab": {}
       },
       "source": [
+        "from torchsummary import summary\n",
+        "\n",
+        "\n",
         "model = SpeechEncoder()\n",
         "input = torch.unsqueeze(torch.tensor(converted).reshape(2,257,601), 0)\n",
         "\n",
-        "model(input.type(torch.float32)).shape"
+        "model(input.type(torch.float32)).shape\n",
+        "summary(model, (2,257,601))"
       ],
       "execution_count": null,
       "outputs": []
