Creato con Colaboratory

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -74,7 +74,14 @@
       },
       "source": [
         "import librosa\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from os import listdir\n",
+        "from os.path import join\n",
+        "from torch.utils.data import Dataset\n",
+        "import glob\n",
+        "\n",
+        "device = 'cuda'"
       ],
       "execution_count": null,
       "outputs": []
@@ -100,7 +107,76 @@
         "colab": {}
       },
       "source": [
-        "spectro = librosa.core.stft(wav, n_fft = 512, hop_length = int(np.ceil(0.01 * sr)),win_length = int(np.ceil(0.025 * sr)) , window='hann', center=True,pad_mode='reflect')"
+        "! ls -l \"/content/drive/My Drive/Speech2Face/vox1_dataset/new_unzippedFaces/unzippedFaces\" | wc -l \n",
+        "#spectro = librosa.core.stft(wav, n_fft = 512, hop_length = int(np.ceil(0.01 * sr)),win_length = int(np.ceil(0.025 * sr)) , window='hann', center=True,pad_mode='reflect')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9xGGujur8DFE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "\n",
+        "meta = pd.read_csv('/content/drive/My Drive/Speech2Face/vox1_dataset/vox1_meta.csv',sep='\\t')\n",
+        "\n",
+        "meta = meta.drop('Gender',axis=1)\n",
+        "meta = meta.drop('Nationality',axis=1)\n",
+        "meta = meta.drop('Set',axis=1)\n",
+        "meta"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5zZbwKKW-riA",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def build_paths(path):\n",
+        "  actor2data = dict()\n",
+        "  \n",
+        "  for person in listdir(path):\n",
+        "    n_path = join(path, person)\n",
+        "    files = glob.glob(n_path + '/**/*.wav', recursive=True)\n",
+        "    actor2data[person] = files\n",
+        "  \n",
+        "  return actor2data\n",
+        "\n",
+        "def load_metadata(path):\n",
+        "  meta = pd.read_csv(path,sep='\\t')\n",
+        "\n",
+        "  meta = meta.drop('Gender',axis=1)\n",
+        "  meta = meta.drop('Nationality',axis=1)\n",
+        "  meta = meta.drop('Set',axis=1)\n",
+        "\n",
+        "class Dataloader(Dataset):\n",
+        "  def __init__(self, path_voices, path_faces, device, size=64):\n",
+        "        super().__init__()\n",
+        "        self.path_voices = path_voices\n",
+        "        self.path_faces = path_faces\n",
+        "        self.size = size\n",
+        "        \n",
+        "        voice_map = build_paths(path_voices)\n",
+        "        face_map = build_paths(path_faces)\n",
+        "        print(face_map)\n",
+        "\n",
+        "  def __len__(self):\n",
+        "        return len(self.images)\n",
+        "    \n",
+        "  def __getitem__(self, idx):\n",
+        "        pass\n",
+        "\n",
+        "Dataloader('/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav', \n",
+        "           '/content/drive/My Drive/Speech2Face/vox1_dataset/unzippedFaces', device)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -113,6 +189,11 @@
         "colab": {}
       },
       "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "def adjust(stft):\n",
         "  if stft.shape[1] == 601:\n",
         "    return stft\n",
