Creato con Colaboratory

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -141,12 +141,12 @@
         "colab": {}
       },
       "source": [
-        "def build_paths(path):\n",
+        "def get_map_person2paths(path, format='wav'):\n",
         "  actor2data = dict()\n",
         "  \n",
         "  for person in listdir(path):\n",
         "    n_path = join(path, person)\n",
-        "    files = glob.glob(n_path + '/**/*.wav', recursive=True)\n",
+        "    files = glob.glob(n_path + '/**/*.'+format, recursive=True)\n",
         "    actor2data[person] = files\n",
         "  \n",
         "  return actor2data\n",
@@ -165,8 +165,8 @@
         "        self.path_faces = path_faces\n",
         "        self.size = size\n",
         "        \n",
-        "        voice_map = build_paths(path_voices)\n",
-        "        face_map = build_paths(path_faces)\n",
+        "        voice_map = get_map_person2paths(path_voices)\n",
+        "        face_map = get_map_person2paths(path_faces, 'jpg')\n",
         "        print(face_map)\n",
         "\n",
         "  def __len__(self):\n",
