Creato con Colaboratory

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -47,7 +47,16 @@
       },
       "source": [
         "# path = \"/content/drive/My Drive/Speech2Face/vox\"\n",
-        "# !curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip"
+        "# !curl --user voxceleb1912:0s42xuw6 -o \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" http://www.robots.ox.ac.uk/~vgg/data/voxceleb/vox1a/vox1_test_wav.zip\n",
+        "\n",
+        "\n",
+        "\n",
+        "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/vox.zip\" /content\n",
+        "! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
+        "\n",
+        "! tar zxvf zippedFaces.tar.gz\n",
+        "! unzip vox.zip\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -167,7 +176,7 @@
         "        \n",
         "        voice_map = get_map_person2paths(path_voices)\n",
         "        face_map = get_map_person2paths(path_faces, 'jpg')\n",
-        "        print(face_map)\n",
+        "        load_metadata()\n",
         "\n",
         "  def __len__(self):\n",
         "        return len(self.images)\n",
@@ -175,8 +184,8 @@
         "  def __getitem__(self, idx):\n",
         "        pass\n",
         "\n",
-        "Dataloader('/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav', \n",
-        "           '/content/drive/My Drive/Speech2Face/vox1_dataset/unzippedFaces', device)\n"
+        "Dataloader('/content/wav', \n",
+        "           '/content/unzippedFaces', device)\n"
       ],
       "execution_count": null,
       "outputs": []
