Creato con Colaboratory

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -53,6 +53,7 @@
         "\n",
         "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/vox.zip\" /content\n",
         "! cp \"/content/drive/My Drive/Speech2Face/zippedFaces.tar.gz\" /content\n",
+        "! cp \"/content/drive/My Drive/Speech2Face/vox1_dataset/vox1_meta.csv\" /content\n",
         "\n",
         "! tar zxvf zippedFaces.tar.gz\n",
         "! unzip vox.zip\n",
@@ -89,6 +90,7 @@
         "from os.path import join\n",
         "from torch.utils.data import Dataset\n",
         "import glob\n",
+        "import itertools\n",
         "\n",
         "device = 'cuda'"
       ],
@@ -116,7 +118,7 @@
         "colab": {}
       },
       "source": [
-        "! ls -l \"/content/drive/My Drive/Speech2Face/vox1_dataset/new_unzippedFaces/unzippedFaces\" | wc -l \n",
+        "! ls -l \"wav\" | wc -l \n",
         "#spectro = librosa.core.stft(wav, n_fft = 512, hop_length = int(np.ceil(0.01 * sr)),win_length = int(np.ceil(0.025 * sr)) , window='hann', center=True,pad_mode='reflect')"
       ],
       "execution_count": null,
@@ -166,26 +168,44 @@
         "  meta = meta.drop('Gender',axis=1)\n",
         "  meta = meta.drop('Nationality',axis=1)\n",
         "  meta = meta.drop('Set',axis=1)\n",
+        "  return meta\n",
+        "\n",
+        "def couple_data(voice_map, face_map, meta):\n",
+        "  count = 0\n",
+        "  out = []\n",
+        "  for index, row in meta.iterrows():\n",
+        "    if (row['VoxCeleb1 ID'] not in voice_map.keys()) or (row['VGGFace1 ID'] not in face_map.keys()):\n",
+        "      count += 1\n",
+        "      continue\n",
+        "    # max(len(voice_map[row['VoxCeleb1 ID']]), face_map[row['VGGFace1 ID']])\n",
+        "    coupled = list(zip(voice_map[row['VoxCeleb1 ID']], face_map[row['VGGFace1 ID']]))\n",
+        "    out += coupled\n",
+        "  \n",
+        "  print(\"elements not found:\", count)\n",
+        "  return out\n",
+        "\n",
+        "def create_coupled_list(path_voices, path_faces, metaP):\n",
+        "  voice_map = get_map_person2paths(path_voices)\n",
+        "  face_map = get_map_person2paths(path_faces, 'jpg')\n",
+        "  meta = load_metadata(metaP)\n",
+        "  return couple_data(voice_map, face_map, meta)\n",
         "\n",
         "class Dataloader(Dataset):\n",
-        "  def __init__(self, path_voices, path_faces, device, size=64):\n",
+        "  def __init__(self, path_voices, path_faces, metaP, device, size=64):\n",
         "        super().__init__()\n",
         "        self.path_voices = path_voices\n",
         "        self.path_faces = path_faces\n",
         "        self.size = size\n",
-        "        \n",
-        "        voice_map = get_map_person2paths(path_voices)\n",
-        "        face_map = get_map_person2paths(path_faces, 'jpg')\n",
-        "        load_metadata()\n",
+        "        self.coupled_list = create_coupled_list(path_voices, path_faces, metaP)\n",
+        "        self.len = len(self.coupled_list)\n",
         "\n",
         "  def __len__(self):\n",
-        "        return len(self.images)\n",
+        "        return self.len\n",
         "    \n",
         "  def __getitem__(self, idx):\n",
         "        pass\n",
         "\n",
-        "Dataloader('/content/wav', \n",
-        "           '/content/unzippedFaces', device)\n"
+        "data = Dataloader('wav', 'unzippedFaces','vox1_meta.csv', device)\n"
       ],
       "execution_count": null,
       "outputs": []
