--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -41,6 +41,19 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "5nkKE256supL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "! pip3 install face_recognition"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "7jXRWARmcebB",
         "colab_type": "code",
         "colab": {}
@@ -91,6 +104,10 @@
         "from torch.utils.data import Dataset\n",
         "import glob\n",
         "import itertools\n",
+        "from PIL import Image\n",
+        "import torchvision.transforms as transforms\n",
+        "import torch\n",
+        "\n",
         "\n",
         "device = 'cuda'"
       ],
@@ -147,6 +164,36 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "bl1vNDOGpKnx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def load_wav(wav_path):\n",
+        "  def adjust(stft):\n",
+        "    if stft.shape[1] == 601:\n",
+        "      return stft\n",
+        "    else:\n",
+        "      return np.concatenate((stft,stft[:,0:601 - stft.shape[1]]),axis = 1)\n",
+        "\n",
+        "  wav, sr = librosa.load(wav_path,sr = 16000, duration = 6.0 ,mono = True)\n",
+        "  spectro = librosa.core.stft(wav, n_fft = 512, hop_length = int(np.ceil(0.01 * sr)),win_length = int(np.ceil(0.025 * sr)) , window='hann', center=True,pad_mode='reflect') \n",
+        "  spectroComplex = adjust(spectro)\n",
+        "  converted = np.zeros((spectroComplex.shape[0], spectroComplex.shape[1], 2))\n",
+        "  i = np.arange(spectroComplex.shape[0])\n",
+        "  j = np.arange(spectroComplex.shape[1])\n",
+        "  \n",
+        "  converted[i,j[:,np.newaxis], 0] = spectroComplex[i,j[:,np.newaxis]].real\n",
+        "  converted[i,j[:,np.newaxis], 1] = spectroComplex[i,j[:,np.newaxis]].imag\n",
+        "\n",
+        "  return converted"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "5zZbwKKW-riA",
         "colab_type": "code",
         "colab": {}
@@ -190,8 +237,23 @@
         "  meta = load_metadata(metaP)\n",
         "  return couple_data(voice_map, face_map, meta)\n",
         "\n",
+        "class _Normalize_Tensor(object):\n",
+        "    def __init__(self, color_mean, color_std):\n",
+        "        self.color_mean = color_mean\n",
+        "        self.color_std = color_std\n",
+        "\n",
+        "    def __call__(self, img):\n",
+        "        # Convert image to Tensor\n",
+        "        img = transforms.functional.to_tensor(img)\n",
+        "\n",
+        "        # Normalize image by the parameter of pre-trained face-encoder\n",
+        "        img = transforms.functional.normalize(\n",
+        "            img, self.color_mean, self.color_std)\n",
+        "\n",
+        "        return img\n",
+        "\n",
         "class Dataloader(Dataset):\n",
-        "  def __init__(self, path_voices, path_faces, metaP, device, size=64):\n",
+        "  def __init__(self, path_voices, path_faces, metaP, device, mean, std, size=224):\n",
         "        super().__init__()\n",
         "        self.path_voices = path_voices\n",
         "        self.path_faces = path_faces\n",
@@ -199,13 +261,51 @@
         "        self.coupled_list = create_coupled_list(path_voices, path_faces, metaP)\n",
         "        self.len = len(self.coupled_list)\n",
         "\n",
+        "        self.color_mean = mean\n",
+        "        self.color_std = std\n",
+        "\n",
+        "        # Transform input for face-encoder\n",
+        "        self.transform_fe = transforms.Compose([\n",
+        "            transforms.Resize((224, 224)),\n",
+        "            _Normalize_Tensor(self.color_mean, self.color_std)\n",
+        "        ])\n",
+        "\n",
+        "        self.transform_fd = transforms.Compose([\n",
+        "            transforms.Resize((self.size, self.size)),\n",
+        "            transforms.ToTensor()\n",
+        "        ])\n",
+        "  \n",
         "  def __len__(self):\n",
         "        return self.len\n",
         "    \n",
         "  def __getitem__(self, idx):\n",
-        "        pass\n",
+        "        wav_p, img_p = self.coupled_list[idx]\n",
         "\n",
-        "data = Dataloader('wav', 'unzippedFaces','vox1_meta.csv', device)\n"
+        "        wav = load_wav(wav_p)\n",
+        "        img = Image.open(img_p)\n",
+        "\n",
+        "        #face_loc = face_locations(np_image)\n",
+        "        img_normalized = self.transform_fe(img)\n",
+        "        image_preprocessed = self.transform_fd(img)\n",
+        "        \n",
+        "        return torch.tensor(wav), img_normalized, image_preprocessed\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "color_mean = [129.186279296875, 104.76238250732422, 93.59396362304688]\n",
+        "color_std = [1, 1, 1]   \n",
+        "color_mean = [tmp / 255.0 for tmp in color_mean]\n",
+        "color_std = [tmp / 255.0 for tmp in color_std]\n",
+        "\n",
+        "\n",
+        "data = Dataloader('wav', 'unzippedFaces','vox1_meta.csv',\n",
+        "                  mean = color_mean, std = color_std, device = device)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -213,29 +313,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cZCVSaO-VHau",
+        "id": "OFcH60t6r1kJ",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "def adjust(stft):\n",
-        "  if stft.shape[1] == 601:\n",
-        "    return stft\n",
-        "  else:\n",
-        "    return np.concatenate((stft,stft[:,0:601 - stft.shape[1]]),axis = 1)\n",
-        "\n",
-        "spectroComplex = adjust(spectro)\n",
-        "converted = np.zeros((spectroComplex.shape[0], spectroComplex.shape[1], 2))\n",
-        "i = np.arange(spectroComplex.shape[0])\n",
-        "j = np.arange(spectroComplex.shape[1])\n",
-        "\n",
-        "converted[i,j[:,np.newaxis], 0] = spectroComplex[i,j[:,np.newaxis]].real\n",
-        "converted[i,j[:,np.newaxis], 1] = spectroComplex[i,j[:,np.newaxis]].imag"
+        "for x in data[10]:\n",
+        "  print(x.shape)"
       ],
       "execution_count": null,
       "outputs": []
