Creato con Colaboratory

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -252,7 +252,7 @@
         "\n",
         "        return img\n",
         "\n",
-        "class Dataloader(Dataset):\n",
+        "class Speech2FaceDataset(Dataset):\n",
         "  def __init__(self, path_voices, path_faces, metaP, device, mean, std, size=224):\n",
         "        super().__init__()\n",
         "        self.path_voices = path_voices\n",
@@ -304,22 +304,8 @@
         "color_std = [tmp / 255.0 for tmp in color_std]\n",
         "\n",
         "\n",
-        "data = Dataloader('wav', 'unzippedFaces','vox1_meta.csv',\n",
+        "data = Speech2FaceDataset('wav', 'unzippedFaces','vox1_meta.csv',\n",
         "                  mean = color_mean, std = color_std, device = device)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "OFcH60t6r1kJ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "for x in data[10]:\n",
-        "  print(x.shape)"
       ],
       "execution_count": null,
       "outputs": []
