Creato con Colaboratory

--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -96,7 +96,9 @@
         "import torch\n",
         "\n",
         "\n",
-        "device = 'cuda'"
+        "device = 'cuda'\n",
+        "vgg_weights_path = '/content/drive/My Drive/Speech2Face/Pretrained/vgg_face_dag.pth'\n",
+        "face_decoder_weights_path = ''"
       ],
       "execution_count": null,
       "outputs": []
@@ -444,6 +446,19 @@
         "\n",
         "        return out\n",
         "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wE_p5eTAw0HD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# TODO: write trainig code"
       ],
       "execution_count": null,
       "outputs": []
