--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -94,6 +95,7 @@
         "from PIL import Image\n",
         "import torchvision.transforms as transforms\n",
         "import torch\n",
+        "from torch.utils.data import DataLoader\n",
         "\n",
         "\n",
         "device = 'cuda'\n",
@@ -353,7 +355,7 @@
         "        img_normalized = self.transform_fe(img)\n",
         "        image_preprocessed = self.transform_fd(img)\n",
         "        \n",
-        "        return torch.tensor(wav), img_normalized, image_preprocessed\n",
+        "        return torch.tensor(wav).reshape(2,257,601).float(), img_normalized, image_preprocessed\n",
         "\n",
         "\n",
         "\n",
@@ -453,12 +455,194 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "082fWCi0rJG2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import torch\n",
+        "import torch.nn.functional as F\n",
+        "from typing import Optional, Callable\n",
+        "from tqdm.notebook import tqdm, trange\n",
+        "\n",
+        "\n",
+        "def permute_pixels(images: torch.Tensor, perm: Optional[torch.Tensor]) -> torch.Tensor:\n",
+        "    \"\"\" Permutes the pixel in each image in the batch\n",
+        "\n",
+        "    :param images: a batch of images with shape [batch, channels, w, h]\n",
+        "    :param perm: a permutation with shape [w * h]\n",
+        "\n",
+        "    :returns: the batch of images permuted according to perm\n",
+        "    \"\"\"\n",
+        "    if perm is None:\n",
+        "        return images\n",
+        "\n",
+        "    batch_size = images.shape[0]\n",
+        "    n_channels = images.shape[1]\n",
+        "    w = images.shape[2]\n",
+        "    h = images.shape[3]\n",
+        "    images = images.view(batch_size, n_channels, -1)\n",
+        "    images = images[..., perm]\n",
+        "    images = images.view(batch_size, n_channels, w, h)\n",
+        "    return images\n",
+        "\n",
+        "\n",
+        "def make_averager() -> Callable[[Optional[float]], float]:\n",
+        "    \"\"\" Returns a function that maintains a running average\n",
+        "\n",
+        "    :returns: running average function\n",
+        "    \"\"\"\n",
+        "    count = 0\n",
+        "    total = 0\n",
+        "\n",
+        "    def averager(new_value: Optional[float]) -> float:\n",
+        "        \"\"\" Running averager\n",
+        "\n",
+        "        :param new_value: number to add to the running average,\n",
+        "                          if None returns the current average\n",
+        "        :returns: the current average\n",
+        "        \"\"\"\n",
+        "        nonlocal count, total\n",
+        "        if new_value is None:\n",
+        "            return total / count if count else float(\"nan\")\n",
+        "        count += 1\n",
+        "        total += new_value\n",
+        "        return total / count\n",
+        "\n",
+        "    return averager\n",
+        "\n",
+        "\n",
+        "def fit(\n",
+        "    epochs: int,\n",
+        "    train_dl: torch.utils.data.DataLoader,\n",
+        "    model: torch.nn.Module,\n",
+        "    VGG: torch.nn.Module, \n",
+        "    opt: torch.optim.Optimizer,\n",
+        "    tag: str,\n",
+        "    perm: Optional[torch.Tensor] = None,\n",
+        "    device: str = \"cuda\",\n",
+        ") -> float:\n",
+        "    \"\"\" Train the model and computes metrics on the test_loader at each epoch\n",
+        "\n",
+        "    :param epochs: number of epochs\n",
+        "    :param train_dl: the train dataloader\n",
+        "    :param test_dl: the test dataloader\n",
+        "    :param model: the model to train\n",
+        "    :param opt: the optimizer to use to train the model\n",
+        "    :param tag: description of the current model\n",
+        "    :param perm: if not None, permute the pixel in each image according to perm\n",
+        "\n",
+        "    :returns: accucary on the test set in the last epoch\n",
+        "    \"\"\"\n",
+        "    for epoch in trange(epochs, desc=\"train epoch\"):\n",
+        "        model.train()\n",
+        "        train_loss_averager = make_averager()  # mantain a running average of the loss\n",
+        "\n",
+        "        # TRAIN\n",
+        "        tqdm_iterator = tqdm(\n",
+        "            enumerate(train_dl),\n",
+        "            total=len(train_dl),\n",
+        "            desc=f\"batch [loss: None]\",\n",
+        "            leave=False,\n",
+        "        )\n",
+        "        for batch_idx, (wav, img_normal, img_preproc) in tqdm_iterator:\n",
+        "            # send to device\n",
+        "            wav, img_normal = wav.to(device), img_normal.to(device)\n",
+        "\n",
+        "            embedding = VGG(img_normal).to(device)\n",
+        "\n",
+        "            if perm is not None:\n",
+        "                data = permute_pixels(data, perm)\n",
+        "\n",
+        "            output = model(wav)\n",
+        "            loss = F.cross_entropy(output, embedding)\n",
+        "            loss.backward()\n",
+        "            opt.step()\n",
+        "            opt.zero_grad()\n",
+        "            print('here')\n",
+        "\n",
+        "            train_loss_averager(loss.item())\n",
+        "\n",
+        "            tqdm_iterator.set_description(\n",
+        "                f\"train batch [avg loss: {train_loss_averager(None):.3f}]\"\n",
+        "            )\n",
+        "            tqdm_iterator.refresh()\n",
+        "\n",
+        "        # TEST\n",
+        "        # model.eval()\n",
+        "        # test_loss_averager = make_averager()  # mantain a running average of the loss\n",
+        "        # correct = 0\n",
+        "        # for data, target in test_dl:\n",
+        "        #     # send to device\n",
+        "        #     data, target = data.to(device), target.to(device)\n",
+        "\n",
+        "        #     if perm is not None:\n",
+        "        #         data = permute_pixels(data, perm)\n",
+        "\n",
+        "        #     output = model(data)\n",
+        "\n",
+        "        #     test_loss_averager(F.cross_entropy(output, target))\n",
+        "\n",
+        "        #     # get the index of the max probability\n",
+        "        #     pred = output.max(1, keepdim=True)[1]\n",
+        "        #     correct += pred.eq(target.view_as(pred)).cpu().sum().item()\n",
+        "\n",
+        "        # accuracy = 100.0 * correct / len(test_dl.dataset)\n",
+        "\n",
+        "        print(\n",
+        "            f\"Epoch: {epoch}\\n\"\n",
+        "            f\"Train set: Average loss: {train_loss_averager(None):.4f}\\n\"\n",
+        "            # f\"Test set: Average loss: {test_loss_averager(None):.4f}, \"\n",
+        "            #f\"Accuracy: {correct}/{len(test_dl.dataset)} ({accuracy:.0f}%)\\n\"\n",
+        "        )\n",
+        "    # models_accuracy[tag] = accuracy\n",
+        "    # return accuracy\n",
+        "\n",
+        "\n",
+        "def get_model_optimizer(model: torch.nn.Module) -> torch.optim.Optimizer:\n",
+        "    \"\"\"\n",
+        "    Encapsulate the creation of the model's optimizer, to ensure that we use the\n",
+        "    same optimizer everywhere\n",
+        "\n",
+        "    :param model: the model that contains the parameter to optimize\n",
+        "\n",
+        "    :returns: the model's optimizer\n",
+        "    \"\"\"\n",
+        "    return optim.Adam(model.parameters(), lr=0.001, weight_decay=1e-5)\n",
+        "    # return optim.SGD(model.parameters(), lr=0.01, momentum=0.1, weight_decay=1e-5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "wE_p5eTAw0HD",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# TODO: write trainig code"
+        "# TODO: write trainig code\n",
+        "vgg = vgg_face_dag(vgg_weights_path)\n",
+        "vgg = vgg.to(device)\n",
+        "model = SpeechEncoder()\n",
+        "model.to(device)\n",
+        "optimizer = torch.optim.Adam(model.parameters())\n",
+        "datal = DataLoader(data, 32, True, num_workers=4)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2jETsH8Nx7JU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "fit(10, datal, model, vgg, optimizer, \"Speech2Face Training\")\n"
       ],
       "execution_count": null,
       "outputs": []
